@@ -1,0 +1,116 @@
+
+{
+	"document":
+		[
+			{
+				"docbgcolour":"#B9EBBB",
+				"docfgcolour":"#896116",
+				"findbgcol":"#800000",
+				"findfgcol":"#ffffff",
+				"linebgcolour":"#54C05D",
+				"linefgcolour":"#ffffff",
+				"bookmarkbgcolour":"#158D3D",
+				"insertcolour":"green"
+			}
+		],
+
+	"functions":
+		[
+			{
+				"colour":"#34893C",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"class":
+		[
+			{
+				"colour":"#00760B",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"types":
+		[
+			{
+				"colour":"#307739",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"comments":
+		[
+			{
+				"colour":"#286927",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"quotes":
+		[
+			{
+				"colour":"#000000",
+				"italic":false,
+				"bold":false
+			}
+		],
+	"includes":
+		[
+			{
+				"colour":"#8F24D2",
+				"italic":false,
+				"bold":false
+			}
+		],
+	"numbers":
+		[
+			{
+				"colour":"#8C8C8C",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"keywords":
+		[
+			{
+				"colour":"#007DFF",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"custom":
+		[
+			{
+				"colour":"#3982EA",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"lanuageextra":
+		[
+			{
+				"colour":"#ff0000",
+				"italic":true,
+				"bold":true
+			}
+		],
+	"variables":
+		[
+			{
+				"colour":"#1CA631",
+				"italic":false,
+				"bold":true
+			}
+		],
+	"toolkit":
+		[
+			{
+				"colour":"#A30EAC",
+				"italic":false,
+				"bold":true
+			}
+		]
+}
+
+
+
