@@ -1,39 +1,45 @@
 /*
  *
- * ©K. D. Hedger. Tue 11 Jan 14:27:37 GMT 2022 keithdhedger@gmail.com
-
- * This file (internet.h) is part of KKEditQT.
-
- * KKEditQT is free software: you can redistribute it and/or modify
+ * ©K. D. Hedger. Tue 28 Jun 10:44:42 BST 2016 kdhedger68713@gmail.com
+ 
+ * Projects is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * at your option) any later version.
 
- * KKEditQT is distributed in the hope that it will be useful,
+ * Projects is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
 
  * You should have received a copy of the GNU General Public License
- * along with KKEditQT.  If not, see <http://www.gnu.org/licenses/>.
+ * along with Projects.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 #ifndef _INTERNET_
 #define _INTERNET_
 
-#define MYEMAIL "keithdhedger@gmail.com"
+#define MYEMAIL "kdhedger68713@gmail.com"
 #define MYWEBSITE "https://keithdhedger.github.io/"
 #define GLOBALWEBSITE "https://keithdhedger.github.io"
 #define ASPELLPAGE GLOBALWEBSITE "/pages/aspellgui/aspelgui.html"
-#define MANPAGEPAGE GLOBALWEBSITE "/pages/manpageeditor/help.html"
+#define MANPAGEPAGE GLOBALWEBSITE "/pages/manpageeditor/manpageeditor.html"
 #define CLIPVIEW GLOBALWEBSITE "/pages/clipviewer/clip.html"
 #define THEMEMANAGER GLOBALWEBSITE "/pages/apps.html#themeed"
 #define COMPMANAGER GLOBALWEBSITE "/pages/apps.html#xfcecomp"
 #define KKEDITPAGE "https://keithdhedger.github.io/KKEdit/"
-#define KKEDITQTPAGE "https://keithdhedger.github.io/KKEditQT/"
+#define KKEDITPAGEFR "https://keithdhedger.github.io/KKEdit/help.fr.html"
 #define KKTERMINALPAGE GLOBALWEBSITE "/pages/kkterminal/kkterminal.html"
+#define KKEDITQTPAGE "https://keithdhedger.github.io/KKEditQT/"
+#define XDECSPAGE GLOBALWEBSITE "/pages/xdecorations/xdecorations.html"
+#define GTKSUPAGE GLOBALWEBSITE "/pages/gtksu/gtksu.html"
 
-#define COPYRITE "Copyright © 2013-2022 K.D.Hedger"
+#define COPYRITE "Copyright © 2013-2023 K.D.Hedger"
 
+#ifndef _USEQT5_
+extern const char	*moreapps[];
+extern const char	*authors[];
+#else
+extern const char*	authors;
 #endif
-
+#endif
